L3, 75_5_random_color_component: async + other imrpovements - Fixed url to use tick mark (`) and ${variables} - Larger Circle Spacing - Added  handleIntervals tempArr.push which uses async/await - Kept the original  handleIntervals tempArr.push which uses .then but commented it out - Added intentional delay of 1 second and modified render to use ternary

--- a/3rd_level/75_5_random_color_component/src/style.css
+++ b/3rd_level/75_5_random_color_component/src/style.css
@@ -9,6 +9,5 @@
     transform: translate(-50%, -50%);
     aspect-ratio: 1;
     border-radius: 50%;
-    background-color: red;
     border: 1px solid black;
 }
